--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -47,29 +47,32 @@
     <hr class="hr2">
     <div class="scottyT1">
         <p>
-            "I never really set out to be a music teacher. My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964 when I was 10. The Beatles had just arrived in America and I just had to learn to play the guitar. From the beginning, I was the kid who had to know. My piano lessons had shown me that there was a system to the way music worked and I knew that if I wanted to learn to play guitar, I would have to understand that system. I wanted to write my own songs ... play by ear ... jam and improvise like the Beatles ... but neither my private teachers or the public school music programs taught that stuff.
+            "I never really set out to be a music teacher. My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964 when I was 10. The Beatles had just arrived in America and I just had to learn to play the guitar. From the beginning, I was the kid who *had* to know. 
+        </p>
+        <p>
+            My piano lessons had shown me that there was a system to the way music worked and I knew that if I wanted to learn to play guitar, I would have to understand that system. I wanted to write my own songs ... play by ear ... jam and improvise like the Beatles ... but neither my private teachers or the public school music programs taught that stuff.
         </p>
     </div>
     <hr class="hr3">
     <div class="scottyT2">
         <p>
-            I tried to learn to play guitar myself. My friends would show me some chords and scales. The books I would try to read were often scattered and confusing. My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no program to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day ... Hendrix, Dylan, The Beatles etc. Everyone thought I was this hot-shot guitar player but I knew I was only faking it. I didn't have <span class="text-warning fw-bold">"The BIG Picture"</span>.
+            I tried to learn to play guitar myself. My friends would show me some chords and scales. The books I would try to read were often scattered and confusing. My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no program to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day ... Hendrix, Dylan, The Beatles etc. Everyone thought I was this hot-shot guitar player but I knew I was only faking it. I didn't have <span>"The BIG Picture"</span>.
         </p>
     </div>
     <hr class="hr4">
     <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../images/caro0.jpg" class="d-block w-100" alt="First carousel image of Scotty">
+                <img src="../images/caro0.jpg" alt="First carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro1.jpg" class="d-block w-100" alt="Second carousel image of Scotty">
+                <img src="../images/caro1.jpg" alt="Second carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro2.jpg" class="d-block w-100" alt="Third carousel image of Scotty">
+                <img src="../images/caro2.jpg" alt="Third carousel image of Scotty">
             </div>
             <div class="carousel-item">
-                <img src="../images/caro3.jpg" class="d-block w-100" alt="Fourth carousel image of Scotty">
+                <img src="../images/caro3.jpg" alt="Fourth carousel image of Scotty">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -84,8 +87,8 @@
     <hr class="hr5">
     <div class="scottyT3">
         <p>
-            Then one summer, my luck changed. A new roommate named <span class="fw-semibold">Dan May</span> moved in with us. Dan was one of those true musical prodigies you hear about ... played the piano before he could walk ... masters degree in music composition at age 22 ... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan understood music inside out. He actually knew the answers to all the questions that I had been asking all those years. I would slap myself on the forehead and ask "Why didn't my other music teachers show me this stuff when I was a kid? "Dan showed me that learning to play the guitar is easy if you can find someone to explain it to you the right way.
-            <p>
+            Then one summer, my luck changed. A new roommate named <span>Dan May</span> moved in with us. Dan was one of those true musical prodigies you hear about ... played the piano before he could walk ... masters degree in music composition at age 22 ... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan understood music inside out. He actually knew the answers to all the questions that I had been asking all those years. I would slap myself on the forehead and ask "Why didn't my other music teachers show me this stuff when I was a kid? "Dan showed me that learning to play the guitar is easy if you can find someone to explain it to you the right way.
+            <p class="scottyLink">
                 <a href="https://www.absolutelyunderstandguitar.com/index.php/bio">(...)</a>
             </p>
         </p>
